# proxiflow

./: .gitignore  CHANGES.md  CHANGES.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
adprep/: __init__.py  __main__.py  cmd.py
adprep/config/: __init__.py  config.py
adprep/preprocessing/: __init__.py  data_cleaning.py
adprep/preprocessor/: preprocessor.py
adprep/utils/: logger.py
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  proxiflow.config.html  proxiflow.core.html  proxiflow.html  proxiflow.utils.html  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/proxiflow/: cli.html
docs/_modules/proxiflow/config/: config.html
docs/_modules/proxiflow/core/: cleaner.html  dataflow.html  normalizer.html
docs/_modules/proxiflow/utils/: logger.html
docs/_sources/: index.rst.txt  modules.rst.txt  proxiflow.core.rst.txt  proxiflow.utils.rst.txt
docs/html/: index.html  modules.html  proxiflow.config.html  py-modindex.html  search.html
docs/html/_modules/: index.html
docs/html/_modules/proxiflow/config/: config.html
docs/html/_modules/proxiflow/core/: dataflow.html
docs/html/_modules/proxiflow/utils/: logger.html
docs/source/: conf.py  index.rst  modules.rst  prepflow.config.rst  prepflow.preprocessor.rst  prepflow.rst  prepflow.utils.rst  proxiflow.config.rst  proxiflow.core.rst  proxiflow.utils.rst  quickstart.rst
prepflow/: __init__.py  cmd.py
prepflow/config/: config.py
prepflow/preprocessor/: preprocessor.py
proxiflow/: __main__.py  cli.py
proxiflow/config/: __init__.py  config.py
proxiflow/core/: __init__.py  cleaner.py  core_utils.py  dataflow.py  engineer.py  normalizer.py
proxiflow/utils/: __init__.py  data.py  errors.py  logger.py
sphinx/source/: conf.py  index.rst  proxiflow.rst
tests/: __init__.py  test_cleaner.py  test_config.py  test_dataflow.py  test_engineer.py  test_normalizer.py  test_preprocessor.py
tests/data/: config.yaml  input.csv  output.csv
