[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "prepflow"
version = "0.1.2"
description = "Data Preprocessing tool in python"
authors = [
  { name = "Martin Tomes", email = "tomesm@gmail.com" },
]
license = { file = "LICENSE" }
readme= "README.rst"
requires-python = ">=3.10"
classifiers = [
   "Intended Audience :: Developers",
   "Operating System :: POSIX :: Linux",
   "Programming Language :: Python",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10",
   "Topic :: Scientific/Engineering",
]

dependencies = [
    "polars>=0.16.5",
    "click>=8.1.3",
    "numpy>=1.24.2",
    "pyaml>=6.0",

]

[project.urls]
Repository = "https://github.com/tomesm/prepflow"

[project.scripts]
prepflow = "prepflow.cmd:run_preprocessor"

[tool.setuptools.packages]
find = {}

[tool.black.format]
max-line-length = 120
extend-ignore = "E203"

[tool.flakeheaven]
exclude = ["README.rst", "README.md"]
format = "colored"
max_line_length = 90
show_source = true
# whitelist = "../../allowlist.txt"

[tool.flakeheaven.plugins]
# flake8-bandit = ["+*", "-S322"]
# flake8-bugbear = ["+*"]
# flake8-builtins = ["+*"]
# flake8-comprehensions = ["+*"]
# flake8-darglint = ["+*"]
# flake8-docstrings = ["+*"]
# flake8-eradicate = ["+*"]
# flake8-isort = ["+*"]
# flake8-mutable = ["+*"]
# flake8-pytest-style = ["+*"]
# flake8-spellcheck = ["+*"]
# pep8-naming = ["+*"]
mccabe = ["+*"]
pycodestyle = ["+*"]
pylint = ["+*"]
pyflakes = ["+*"]