[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "proxiflow"
version = "0.1.3"
description = "Data Preprocessing flow tool in python"
authors = ["Martin Tomes <tomesm@gmail.com>"]
license = "MIT"
readme= "README.md"
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
polars = "^0.16.7"
numpy = "^1.24.2"
click = "^8.1.3"
pyaml = "^21.10.1"
scipy = "^1.10.1"



[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
# flake8 = "^6.0.0"
pytype = "^2023.2.17"
ruff = "^0.0.252"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# myst-parser = "^0.18.1"
sphinx-rtd-theme = "^1.2.0"
sphinx = "^6.1.3"

[tool.poetry.urls]
"Repository" = "https://github.com/tomesm/proxiflow"
"Documentation" = "http://proxiflow.readthedocs.io"
"Bug Tracker" = "https://github.com/tomesm/proxiflow/issues"

[project.scripts]
proxiflow = "proxiflow.cli:__main__"

[tool.setuptools.packages]
find = {}

[tool.black.format]
max-line-length = 120
extend-ignore = "E203"

[tool.ruff]
select = ["E", "F"]
line-length = 120
# ignore = ["E501"]

# [tool.flakeheaven]
# exclude = ["README.rst", "README.md"]
# format = "colored"
# max_line_length = 120
# show_source = true
# whitelist = "../../allowlist.txt"

[tool.flakeheaven.plugins]
# flake8-bandit = ["+*", "-S322"]
# flake8-bugbear = ["+*"]
# flake8-builtins = ["+*"]
# flake8-comprehensions = ["+*"]
# flake8-darglint = ["+*"]
# flake8-docstrings = ["+*"]
# flake8-eradicate = ["+*"]
# flake8-isort = ["+*"]
# flake8-mutable = ["+*"]
# flake8-pytest-style = ["+*"]
# flake8-spellcheck = ["+*"]
# pep8-naming = ["+*"]
# mccabe = ["+*"]
# pycodestyle = ["+*", "-E501"]
# pylint = ["+*"]
# pyflakes = ["+*"]
